migrate all existing wsf10 areas to separated wf_*

--- a/mod/area/huegel_n00_o00.are.yml
+++ b/mod/area/huegel_n00_o00.are.yml
@@ -52,7 +52,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 744}
+    Tile_ID: {type: int, value: 709}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -64,7 +64,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 325}
+    Tile_ID: {type: int, value: 303}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -160,7 +160,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 372}
+    Tile_ID: {type: int, value: 339}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -172,7 +172,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 739}
+    Tile_ID: {type: int, value: 704}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -220,7 +220,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 507}
+    Tile_ID: {type: int, value: 474}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -232,7 +232,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 507}
+    Tile_ID: {type: int, value: 474}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -292,7 +292,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 739}
+    Tile_ID: {type: int, value: 704}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -316,7 +316,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -328,7 +328,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -412,7 +412,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 741}
+    Tile_ID: {type: int, value: 706}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -424,7 +424,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -436,7 +436,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -460,7 +460,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -472,7 +472,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -484,7 +484,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -544,7 +544,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -556,7 +556,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 322}
+    Tile_ID: {type: int, value: 300}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -580,7 +580,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 270}
+    Tile_ID: {type: int, value: 250}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -592,7 +592,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 1258}
+    Tile_ID: {type: int, value: 1073}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -652,7 +652,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 741}
+    Tile_ID: {type: int, value: 706}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -700,7 +700,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -712,7 +712,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -724,7 +724,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -736,7 +736,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 322}
+    Tile_ID: {type: int, value: 300}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -772,7 +772,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 1265}
+    Tile_ID: {type: int, value: 1077}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -784,7 +784,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 338}
+    Tile_ID: {type: int, value: 314}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -796,7 +796,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 341}
+    Tile_ID: {type: int, value: 317}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -820,7 +820,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 322}
+    Tile_ID: {type: int, value: 300}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -844,7 +844,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -892,7 +892,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 744}
+    Tile_ID: {type: int, value: 709}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -904,7 +904,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 244}
+    Tile_ID: {type: int, value: 224}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -916,7 +916,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 338}
+    Tile_ID: {type: int, value: 314}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -940,7 +940,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 295}
+    Tile_ID: {type: int, value: 273}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -952,7 +952,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -964,7 +964,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -976,7 +976,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1012,7 +1012,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 739}
+    Tile_ID: {type: int, value: 704}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1036,7 +1036,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 1262}
+    Tile_ID: {type: int, value: 1075}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -1048,7 +1048,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 323}
+    Tile_ID: {type: int, value: 301}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1072,7 +1072,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1108,7 +1108,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1132,7 +1132,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 1265}
+    Tile_ID: {type: int, value: 1077}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1144,7 +1144,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 338}
+    Tile_ID: {type: int, value: 314}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1156,7 +1156,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 341}
+    Tile_ID: {type: int, value: 317}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1168,7 +1168,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1228,7 +1228,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1246,7 +1246,7 @@ Tile_List:
     Tile_Orientation: {type: int, value: 2}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
-Tileset: {type: resref, value: wsf10}
+Tileset: {type: resref, value: wf_su}
 Version: {type: dword, value: 0}
 Width: {type: int, value: 10}
 WindPower: {type: int, value: 0}
