--- a/mod/area/huegel_n00_o01.are.yml
+++ b/mod/area/huegel_n00_o01.are.yml
@@ -100,7 +100,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 325}
+    Tile_ID: {type: int, value: 303}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -112,7 +112,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 507}
+    Tile_ID: {type: int, value: 474}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -184,7 +184,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 508}
+    Tile_ID: {type: int, value: 475}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -232,7 +232,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 508}
+    Tile_ID: {type: int, value: 475}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -268,7 +268,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 507}
+    Tile_ID: {type: int, value: 474}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -316,7 +316,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 325}
+    Tile_ID: {type: int, value: 303}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -340,7 +340,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 324}
+    Tile_ID: {type: int, value: 302}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -352,7 +352,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 325}
+    Tile_ID: {type: int, value: 303}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -364,7 +364,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -376,7 +376,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 276}
+    Tile_ID: {type: int, value: 256}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -388,7 +388,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 325}
+    Tile_ID: {type: int, value: 303}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -400,7 +400,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 507}
+    Tile_ID: {type: int, value: 474}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -448,7 +448,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 331}
+    Tile_ID: {type: int, value: 309}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -472,7 +472,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -484,7 +484,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 277}
+    Tile_ID: {type: int, value: 257}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -496,7 +496,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 273}
+    Tile_ID: {type: int, value: 253}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -508,7 +508,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 242}
+    Tile_ID: {type: int, value: 222}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -544,7 +544,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 320}
+    Tile_ID: {type: int, value: 298}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -604,7 +604,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 277}
+    Tile_ID: {type: int, value: 257}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -616,7 +616,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 285}
+    Tile_ID: {type: int, value: 265}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -652,7 +652,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 276}
+    Tile_ID: {type: int, value: 256}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -664,7 +664,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 273}
+    Tile_ID: {type: int, value: 253}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -712,7 +712,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 273}
+    Tile_ID: {type: int, value: 253}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -724,7 +724,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -736,7 +736,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -772,7 +772,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -784,7 +784,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 273}
+    Tile_ID: {type: int, value: 253}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -796,7 +796,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -832,7 +832,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -844,7 +844,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 322}
+    Tile_ID: {type: int, value: 300}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -892,7 +892,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -904,7 +904,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 290}
+    Tile_ID: {type: int, value: 270}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -916,7 +916,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -952,7 +952,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -964,7 +964,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -988,7 +988,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1000,7 +1000,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1012,7 +1012,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1036,7 +1036,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1048,7 +1048,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1072,7 +1072,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 309}
+    Tile_ID: {type: int, value: 287}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -1084,7 +1084,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 309}
+    Tile_ID: {type: int, value: 287}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1096,7 +1096,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 278}
+    Tile_ID: {type: int, value: 258}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -1108,7 +1108,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 277}
+    Tile_ID: {type: int, value: 257}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1132,7 +1132,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1144,7 +1144,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1156,7 +1156,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 280}
+    Tile_ID: {type: int, value: 260}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1180,7 +1180,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1192,7 +1192,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1216,7 +1216,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1228,7 +1228,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 273}
+    Tile_ID: {type: int, value: 253}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1246,7 +1246,7 @@ Tile_List:
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
-Tileset: {type: resref, value: wsf10}
+Tileset: {type: resref, value: wf_su}
 Version: {type: dword, value: 0}
 Width: {type: int, value: 10}
 WindPower: {type: int, value: 0}
