--- a/mod/area/huegel_s01_o01.are.yml
+++ b/mod/area/huegel_s01_o01.are.yml
@@ -64,7 +64,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 510}
+    Tile_ID: {type: int, value: 477}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -76,7 +76,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 511}
+    Tile_ID: {type: int, value: 478}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -184,7 +184,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 512}
+    Tile_ID: {type: int, value: 479}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -196,7 +196,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 513}
+    Tile_ID: {type: int, value: 480}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -280,7 +280,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 325}
+    Tile_ID: {type: int, value: 303}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -292,7 +292,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -376,7 +376,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 880}
+    Tile_ID: {type: int, value: 845}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -412,7 +412,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -424,7 +424,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -544,7 +544,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 285}
+    Tile_ID: {type: int, value: 265}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -556,7 +556,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -568,7 +568,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 320}
+    Tile_ID: {type: int, value: 298}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -676,7 +676,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -712,7 +712,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -736,7 +736,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 243}
+    Tile_ID: {type: int, value: 223}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -820,7 +820,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -832,7 +832,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 276}
+    Tile_ID: {type: int, value: 256}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -916,7 +916,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -928,7 +928,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -952,7 +952,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 324}
+    Tile_ID: {type: int, value: 302}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -988,7 +988,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 325}
+    Tile_ID: {type: int, value: 303}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1024,7 +1024,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1036,7 +1036,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 285}
+    Tile_ID: {type: int, value: 265}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1072,7 +1072,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 508}
+    Tile_ID: {type: int, value: 475}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1180,7 +1180,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 324}
+    Tile_ID: {type: int, value: 302}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1228,7 +1228,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 508}
+    Tile_ID: {type: int, value: 475}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -1246,7 +1246,7 @@ Tile_List:
     Tile_Orientation: {type: int, value: 1}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
-Tileset: {type: resref, value: wsf10}
+Tileset: {type: resref, value: wf_su}
 Version: {type: dword, value: 0}
 Width: {type: int, value: 10}
 WindPower: {type: int, value: 0}
