--- a/mod/area/huegel_n00_o03.are.yml
+++ b/mod/area/huegel_n00_o03.are.yml
@@ -76,7 +76,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -88,7 +88,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -136,7 +136,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -148,7 +148,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -184,7 +184,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 278}
+    Tile_ID: {type: int, value: 258}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -196,7 +196,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 279}
+    Tile_ID: {type: int, value: 259}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -208,7 +208,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 309}
+    Tile_ID: {type: int, value: 287}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -220,7 +220,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -256,7 +256,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 290}
+    Tile_ID: {type: int, value: 270}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -280,7 +280,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -304,7 +304,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -316,7 +316,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -328,7 +328,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -340,7 +340,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -352,7 +352,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -364,7 +364,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 1877}
+    Tile_ID: {type: int, value: 1453}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -376,7 +376,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -388,7 +388,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -400,7 +400,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -448,7 +448,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 322}
+    Tile_ID: {type: int, value: 300}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -460,7 +460,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 322}
+    Tile_ID: {type: int, value: 300}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -496,7 +496,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -544,7 +544,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 322}
+    Tile_ID: {type: int, value: 300}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -568,7 +568,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -580,7 +580,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 276}
+    Tile_ID: {type: int, value: 256}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -604,7 +604,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -616,7 +616,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -628,7 +628,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -664,7 +664,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -676,7 +676,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -700,7 +700,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -712,7 +712,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 320}
+    Tile_ID: {type: int, value: 298}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -724,7 +724,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 271}
+    Tile_ID: {type: int, value: 251}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -760,7 +760,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 321}
+    Tile_ID: {type: int, value: 299}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
@@ -784,7 +784,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -844,7 +844,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -856,7 +856,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 280}
+    Tile_ID: {type: int, value: 260}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -976,7 +976,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -988,7 +988,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 277}
+    Tile_ID: {type: int, value: 257}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1048,7 +1048,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1084,7 +1084,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1096,7 +1096,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 274}
+    Tile_ID: {type: int, value: 254}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1108,7 +1108,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1132,7 +1132,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 275}
+    Tile_ID: {type: int, value: 255}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1144,7 +1144,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 298}
+    Tile_ID: {type: int, value: 276}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
@@ -1168,7 +1168,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 1}
-    Tile_ID: {type: int, value: 273}
+    Tile_ID: {type: int, value: 253}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
@@ -1204,7 +1204,7 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 272}
+    Tile_ID: {type: int, value: 252}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
@@ -1246,7 +1246,7 @@ Tile_List:
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
-Tileset: {type: resref, value: wsf10}
+Tileset: {type: resref, value: wf_su}
 Version: {type: dword, value: 0}
 Width: {type: int, value: 10}
 WindPower: {type: int, value: 0}
